--- a/src/components/Instructor.css
+++ b/src/components/Instructor.css
@@ -28,6 +28,24 @@
     font-weight: 600;
 }
 
+.inst-btn{
+    width: 60%;
+    font-size: 1.2rem;
+    color: #fff;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: var(--secondary-color);
+    border: 1px solid var(--secondary-color);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.inst-btn:hover {
+    background: var(--secondary-dark);
+    border: 1px solid var(--secondary-dark);
+    color: #fff;
+  }
+
 @media screen and (max-width: 940px) {
     .col-2 {
         padding: 1rem;
